force-app/main/default/objects/SVMXA360__CONF_UserGroupMember__c/SVMXA360__CONF_UserGroupMember__c.object-meta.xml
<CustomObject>
    <description>This junction object stores the User records related to the User Group.</description>
    <label>A360 User Group Member</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A360 User Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>