force-app/main/default/objects/SVMXA360__CONF_UserGroupMember__c/fields/SVMXA360__MemberType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MemberType__c</fullName>
    <description>Stores the type of the member.</description>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>