force-app/main/default/objects/SVMXA360__CONF_UserGroupMember__c/fields/SVMXA360__UserGroupId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UserGroupId__c</fullName>
    <description>Stores the related User Group Record.</description>
    <label>A360 User Group</label>
    <referenceTo>SVMXA360__CONF_UserGroup__c</referenceTo>
    <relationshipLabel>A360 User Group Members</relationshipLabel>
    <relationshipName>A360_User_Group_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>