force-app/main/default/objects/SVMXA360__CONF_UserGroupMember__c/fields/SVMXA360__UserId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the related User Record.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>A360_User_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>